added got module.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-upload": "^0.1.0",
+    "got": "^11.8.3",
     "mongoose": "^6.0.13",
     "moongoose": "0.0.5"
   }
