added upload folder.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-upload": "^0.1.0",
     "got": "^11.8.3",
     "mongoose": "^6.0.13",
-    "moongoose": "0.0.5"
+    "moongoose": "0.0.5",
+    "multer": "^1.4.3"
   }
 }
